fix(addon-table): fix arrow visibility in safari

--- a/projects/addon-table/components/table/th/th.style.less
+++ b/projects/addon-table/components/table/th/th.style.less
@@ -118,8 +118,13 @@
     }
 
     &_sorted,
-    &:focus-visible,
     &:hover {
+        & .arrow {
+            opacity: 1;
+        }
+    }
+
+    &:focus-visible {
         & .arrow {
             opacity: 1;
         }
